--- a/src/app/common/auth/login/login.component.html
+++ b/src/app/common/auth/login/login.component.html
@@ -1,5 +1,6 @@
 <h2>Login</h2>
 <form>
+
     <div class="row">
         <div [formGroup]="loginForm" class="col-md-6">
             <label>Email</label>
@@ -9,7 +10,7 @@
                 formControlName="email"
                 name="email"
             />
-            <label>Password</label>
+            <label>PASSWORD</label>
             <input
                 type="password"
                 class="form-control"
@@ -25,8 +26,7 @@
             <button type="submit" class="btn btn-primary" (click)="login()">
                 Submit
             </button>
-            <button
-                type="button"
+            <button type="button"
                 class="btn btn-secondary float-right"
                 routerLink="/signup"
             >
