--- a/src/app/common/auth/login/login.component.html
+++ b/src/app/common/auth/login/login.component.html
@@ -11,7 +11,7 @@
                 formControlName="email"
                 name="email"
             />
-            <label>PASSWORD</label>
+            <label>PLEASE enter password</label>
             <input
                 type="password"
                 class="form-control"
